--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nectarjs_extern",
-  "version": "0.6.0",
+  "name": "nectarjs_external",
+  "version": "0.6.1",
   "description": "Javascript's God Mode. No VM. No Bytecode. No GC. Just native binaries.",
   "scripts": {},
   "repository": {
